# stemalyze

./: README.md  gui.py  pyproject.toml  requirements.txt
outdir/analysis/: bars.json  chords.json  drum_patterns.json  melody_by_bar.json
outdir/reports/: boot_stemalyze_report.txt
stemalyze/: analysis.py  cli.py  harmony.py  report.py  separate.py
tests/: smoke.py
